lab1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: nginx
          # Adding environment variable from ConfigMap
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/app/data"
              name: storage-volume
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            #claimName: my-pvc
            claimName: missing-pvc
